# PSALM

./: .gitignore  README.md  package.json  tailwind.config.js
public/: index.html  splashscreen.html
src/: App.vue  shims-vue.d.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/data/: staff.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: HelloWorld.vue
src/components/common/: Button.vue  Checkbox.vue  DeleteModal.vue  Icon.vue  Input.vue  PsalmButton.vue  PsalmCard.vue  PsalmDeleteButton.vue  PsalmDeleteModal.vue  PsalmIcon.vue  PsalmInput.vue  PsalmModal.vue  TextInput.vue
src/components/home/: DoodleImportModal.vue  ProjectList.vue  Staff.vue  StaffImportModal.vue
src/components/project/: PdfDownloadModal.vue  ProjectAvailabilityButton.vue  ProjectAvailabilityIcon.vue  ProjectButton.vue  ProjectFilterButton.vue  ProjectStaff.vue
src/components/projects/: ProjectList.vue  Projects.vue
src/components/staff/: EditStaffForm.vue  Staff.vue
src/interfaces/: Employee.ts  Project.ts
src/models/enums/: Available.ts  Deployed.ts  ModalType.ts
src/models/interfaces/: ActiveFilter.ts  Employee.ts  Modal.ts  Project.ts  ProjectMenu.ts  Toast.ts
src/router/: index.ts
src/store/: index.ts
src/utils/: projects.ts  utils.ts
src/views/: About.vue  Home.vue  ProjectPage backup.vue  ProjectPage.vue  Staff.vue
