[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
calamine = { version = "0.18.0" }

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["dialog-all", "fs-create-dir", "fs-read-dir", "fs-read-text-file", "fs-remove-file", "fs-write-binary-file", "fs-write-file", "window-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
